# AssEffect

./: CMakeLists.txt  README.md  build.sh
Source/: FactoryPresets.h  LoFiEngine.cpp  LoFiEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
